# FastEdge-lib

./: .gitignore  .gitmodules  AGENTS.md  CHANGELOG.md  CLAUDE.md  Cargo.toml  README.md  deny.custom  release.toml  world.wit
.github/actions-rs/: grcov.yml
.github/workflows/: cd.yaml  ci.yaml  create_release_pr.yaml  fossa.yaml  release.yaml
crates/cache/: Cargo.toml  README.md
crates/cache/src/: lib.rs
crates/candle-wasi-nn/: Cargo.toml
crates/candle-wasi-nn/src/: lib.rs
crates/dictionary/: Cargo.toml
crates/dictionary/src/: lib.rs
crates/http-backend/: Cargo.toml
crates/http-backend/src/: lib.rs  stats.rs
crates/http-service/: Cargo.toml
crates/http-service/src/: executor.rs  lib.rs  metrics.rs  state.rs  tls.rs
crates/http-service/src/executor/: http.rs  mod.rs  wasi_http.rs
crates/http-service/src/fixtures/: alloc.wasm  dummy.wasm
crates/key-value/: Cargo.toml
crates/key-value-store/: Cargo.toml
crates/key-value-store/src/: lib.rs  redis_impl.rs
crates/key-value/src/: lib.rs  redis_store.rs
crates/reactor/: Cargo.toml
crates/reactor/src/: lib.rs
crates/reactor/wit/: README.md  dictionary.wit  key-value.wit  utils.wit
crates/runtime/: Cargo.toml
crates/runtime/src/: app.rs  lib.rs  limiter.rs  logger.rs  registry.rs  service.rs  store.rs  stub.rs
crates/runtime/src/util/: access_log.rs  metrics.rs  mod.rs  stats.rs
crates/secret/: Cargo.toml
crates/secret/src/: lib.rs
crates/utils/: Cargo.toml
crates/utils/src/: dictionary.rs  lib.rs
server/src/logger/: syslog_udp.rs
src/: cache.rs  context.rs  dotenv.rs  executor.rs  key_value.rs  main.rs  secret.rs
