[workspace]
members = ["crates/*"]
resolver = "2"

[workspace.package]
version = "0.12.0"
edition = "2021"
publish = false
authors = ["FastEdge Development Team"]

[workspace.dependencies]
tokio = { version = "1", features = ["full"] }
tokio-util = { version = "0.7", features = ["codec"] }
tracing = "0.1"
hyper = { version = "1", features = ["full"] }
http = "1.3"
async-trait = "0.1"
wasmtime = { git = "https://github.com/G-Core/wasmtime.git", features = ["component-model"], branch = "release-36.0.0"}
wasmtime-wasi = { git = "https://github.com/G-Core/wasmtime.git", branch = "release-36.0.0"}
wasmtime-wasi-io = { git = "https://github.com/G-Core/wasmtime.git", branch = "release-36.0.0"}
wasi-common = { git = "https://github.com/G-Core/wasmtime.git", branch = "release-36.0.0"}
wasmtime-wasi-nn = { git = "https://github.com/G-Core/wasmtime.git", branch = "release-36.0.0", features = ["openvino", "candle"] }
wasmtime-wasi-http = { git = "https://github.com/G-Core/wasmtime.git", branch = "release-36.0.0"}
wasmtime-environ = { git = "https://github.com/G-Core/wasmtime.git", branch = "release-36.0.0"}
bytesize = "2.0.1"

clap = { version = "4", features = ["derive"] }
moka = { version = "0.12", features = ["sync"] }
smol_str = { version = "0.3.2", features = ["serde"] }
anyhow = "1.0"

[workspace.lints.rust]
unused_extern_crates = 'warn'
trivial_numeric_casts = 'warn'
unstable_features = 'warn'
unused_import_braces = 'warn'

[workspace.lints.clippy]
all = 'allow'

[package]
name = "fastedge-run"
version.workspace = true
edition.workspace = true
publish.workspace = true
authors.workspace = true


[dev-dependencies]
tempfile = "3.22"

[dependencies]
anyhow = { workspace = true }
hyper = { workspace = true }
http = { workspace = true }
tokio = { workspace = true }
wasmtime = { workspace = true }
smol_str = { workspace = true }
async-trait = {workspace = true}
clap = { version = "4.5", features = ["derive"] }
pretty_env_logger = "0.5"
runtime = { path = "crates/runtime", default-features = false }
http-service = { path = "crates/http-service" }
http-backend = { path = "crates/http-backend" }
dictionary = { path = "crates/dictionary" }
secret = { path = "crates/secret" }
key-value-store = { path = "crates/key-value-store" }
hyper-tls = "0.6"
hyper-util = { version = "0.1", features = ["client", "client-legacy", "http1", "tokio"] }
http-body-util = "0.1"
bytesize = { workspace = true}

[target.'cfg(target_family = "unix")'.dependencies]
shellflip = "2.1.2"
