[package]
name = "cache"
version.workspace = true
edition.workspace = true
publish.workspace = true
authors.workspace = true
description = "Cache host functions with sync and async support"

[features]
default = []

[dependencies]
reactor = { path = "../reactor" }
wasmtime = { workspace = true }
slab = "0.4"
async-trait = "0.1"
smol_str = { workspace = true }
tracing = { workspace = true }

[dev-dependencies]
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }

[lints]
workspace = true

