[package]
name = "candle-wasi-nn"
version.workspace = true
edition.workspace = true
publish.workspace = true
authors.workspace = true

[dependencies]
wasmtime-wasi-nn = { workspace = true }
tracing = { workspace = true }
candle-nn = "0.3"

[target.'cfg(target_os = "macos")'.dependencies]
candle-core = { version = "0.3", features = ["accelerate"] }
candle-transformers = { version = "0.3", features = ["accelerate"] }

[target.'cfg(not(target_os = "macos"))'.dependencies]
candle-core = { version = "0.3" }
candle-transformers = { version = "0.3" }
