[package]
name = "http-backend"
version.workspace = true
edition.workspace = true
publish.workspace = true
authors.workspace = true
description = "Client component for outbound http requests"

[dependencies]
reactor = { path = "../reactor" }
http = {workspace = true}
async-trait = {workspace = true}
anyhow = {workspace = true}
tracing = {workspace = true}
hyper = { workspace = true }
tokio = { workspace = true }
hyper-util = { version = "0.1.3", features = ["client", "client-legacy", "http1", "tokio"] }
http-body-util = "0.1.1"
pin-project = "1.1.3"
log = "0.4.20"
url = "2.5.0"
tower-service = "0.3.2"
smol_str = {workspace = true}

[dev-dependencies]
claims = "0.7"
tracing-test = "0.2"
mock-http-connector = "0.3"
