[package]
name = "http-backend"
version.workspace = true
edition.workspace = true
publish.workspace = true
authors.workspace = true
description = "Client component for outbound http requests"

[dependencies]
reactor = { path = "../reactor" }
http = {workspace = true}
async-trait = {workspace = true}
anyhow = {workspace = true}
tracing = {workspace = true}
hyper = { workspace = true }
tokio = { workspace = true }
hyper-util = { version = "0.1.10", features = ["client", "client-legacy", "http1", "tokio"] }
http-body-util = "0.1.2"
pin-project = "1.1.8"
tower-service = "0.3.3"
smol_str = {workspace = true}

[dev-dependencies]
claims = "0.8"
tracing-test = "0.2"
mock-http-connector = "0.3"
