[package]
name = "http-service"
version.workspace = true
edition.workspace = true
publish.workspace = true
authors.workspace = true

[features]
default = []
metrics = ["runtime/metrics"]
stats = ["runtime/stats"]
tls = ["tokio-rustls", "rustls-pemfile", "hyper-rustls", "rustls"]

[dependencies]
anyhow = { workspace = true }
tokio = { workspace = true }
tokio-util = { workspace = true }
hyper = { workspace = true }
http = { workspace = true }
wasmtime = { workspace = true }
wasmtime-wasi = { workspace = true }
wasmtime-wasi-nn = { workspace = true }
wasi-common = { workspace = true }
tracing = { workspace = true }
smol_str = { workspace = true }
tokio-rustls = { version = "0.24.1", optional = true}
rustls-pemfile = { version = "1.0.2" , optional = true}
hyper-rustls = { version = "0.24.1", optional = true }
rustls = { version = "0.21.6", optional = true }
reactor = { path = "../reactor" }
runtime = { path = "../runtime" }
http-backend = { path = "../http-backend" }
nanoid = "0.4"
bytesize = "1.3.0"
futures = "0.3.30"
chrono = "0.4"
async-trait = "0.1"
shellflip = {workspace = true}

[dev-dependencies]
claims = "0.7"
test-case = "3.3"
tracing-test = "0.2"

