[package]
name = "http-service"
version.workspace = true
edition.workspace = true
publish.workspace = true
authors.workspace = true

[features]
default = []
metrics = ["runtime/metrics"]
stats = ["runtime/stats"]

[dependencies]
anyhow = { workspace = true }
tokio = { workspace = true }
tokio-util = { workspace = true }
hyper = { workspace = true }
http = { workspace = true }
wasmtime = { workspace = true }
wasmtime-wasi = { workspace = true }
wasmtime-wasi-nn = { workspace = true }
wasi-common = { workspace = true }
tracing = { workspace = true }
smol_str = { workspace = true }
reactor = { path = "../reactor" }
runtime = { path = "../runtime" }
http-backend = { path = "../http-backend" }
dictionary = { path = "../dictionary" }
secret = { path = "../secret" }
nanoid = "0.4"
bytesize = "1.3.0"
futures = "0.3.30"
once_cell = "1.19"
prometheus = { version = "0.13.3", features = ["process"], optional = true }
serde = "1.0"
clickhouse = { version = "0.13", optional = true }
chrono = "0.4"
async-trait = "0.1"
wasmtime-wasi-http = "20.0.2"
hyper-util = "0.1"
http-body-util = "0.1"
shellflip = {workspace = true}
bytes = "1.6"
uri = "0.4"

[dev-dependencies]
claims = "0.7"
test-case = "3.3"
tracing-test = "0.2"

