[package]
name = "http-service"
version.workspace = true
edition.workspace = true
publish.workspace = true
authors.workspace = true

[features]
default = []
metrics = ["runtime/metrics"]

[dependencies]
anyhow = { workspace = true }
tokio = { workspace = true }
hyper = { workspace = true }
http = { workspace = true }
wasmtime = { workspace = true }
wasmtime-wasi = { workspace = true }
wasmtime-wasi-nn = { workspace = true }
wasi-common = { workspace = true }
wasmtime-wasi-http = { workspace = true }
tracing = { workspace = true }
smol_str = { workspace = true }
reactor = { path = "../reactor" }
runtime = { path = "../runtime" }
http-backend = { path = "../http-backend" }
utils = { path = "../utils" }
secret = { path = "../secret" }
nanoid = "0.4"
async-trait = "0.1"
hyper-util = { version = "0.1", features = ["server", "server-graceful"] }
http-body-util = "0.1"
bytes = "1.10"

[target.'cfg(target_family = "unix")'.dependencies]
shellflip = "2.1.2"

[dev-dependencies]
claims = "0.8"
test-case = "3.3"
tracing-test = "0.2"
key-value-store = { path = "../key-value-store" }
