[package]
name = "key-value"
version.workspace = true
edition.workspace = true
publish.workspace = true
authors.workspace = true
description = "Client component for outbound http requests"

[dependencies]
reactor = { path = "../reactor" }
anyhow = {workspace = true}
tracing = {workspace = true}
async-trait = {workspace = true}
wasmtime = {workspace = true}
redis = { workspace = true, features = ["aio"] }
slab = "0.4"
