[package]
name = "runtime"
version.workspace = true
edition.workspace = true
publish.workspace = true
authors.workspace = true

[features]
default = ["kafka_log"]
kafka_log = []
metrics = ["prometheus", "lazy_static"]
stats = ["clickhouse"]

[dependencies]
anyhow = { workspace = true }
tokio = { workspace = true }
tokio-util = { workspace = true }
wasmtime = { workspace = true }
wasmtime-wasi = { workspace = true }
wasi-common = { workspace = true }
wasmtime-wasi-nn = { workspace = true }
wasmtime-wasi-http = { workspace = true }
wasmtime-environ = { workspace = true }
smol_str = { workspace = true }
moka = { workspace = true }
http = {workspace = true}
wit-component = "0.223.0"
tracing = { workspace = true }
bytesize = "1"
http-backend = { path = "../http-backend" }
async-trait = "0.1"
bytes = "1.9"
serde = "1.0"
serde_json = "1.0"
chrono = { version = "0.4", features = ["serde"] }
prometheus = { version = "0.13.4", features = ["process"], optional = true }
clickhouse = { version = "0.13", optional = true }
lazy_static = { version = "1.5.0", optional = true }

[dev-dependencies]
claims = "0.8"

[lints]
workspace = true
