[package]
name = "secret"
version.workspace = true
edition.workspace = true
publish.workspace = true
authors.workspace = true
description = "secret host function"

[dependencies]
reactor = { path = "../reactor" }
anyhow = {workspace = true}
tracing = {workspace = true}
async-trait = {workspace = true}
wasmtime = {workspace = true}

[lints]
workspace = true
